--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 
 		<h1>Bienvenue</h1>
 
-		<a href="https://ssted2000.github.io/endercraft-pvp.fr"><p>EnderCraft</p></a>
-        <a href="https://ssted2000.github.io/boisimuboi.com"><p>Boi Simulator</p></a>
+		<a href = "https://ssted2000.github.io/endercraft-pvp.fr"><p>EnderCraft</p></a>
+		<a href = "https://ssted2000.github.io/boisimuboi.com"><p>Boi Simulator</p></a>
+		<a href = "https://ssted2000.github.io/devoirs"><p>Ndyx</p></a>
+		<a href = "https://ssted2000.github.io/restartexplorer"><p>RestartExplorer</p></a>
 
 
 
